--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,13 @@
 
 <body>
   <h1>Hello World!</h1>
-
+  <a href="/reservation">API Reservation</a>
+  <a href="/waitlist">API Waitlist</a>
 
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script>
 
-    
+
   </script>
 </body>
 
