--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
 <body>
   <h1>Hello World!</h1>
 
+  <a href ="/reservation">API Reservation</a>
+  <span> || </span>
+  <a href= "/waitlist">API Waitlist</a>
+
 
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script>
